tests/compiler/errors/06-delete-non-ref.jsa
// jastat-summary: Error when deleting non-reference type
// jastat: mode=compiler, capture=expect

let x: i32 = 42;
// jastat_expect: TE_CANNOT_DELETE_NON_REF
delete x;  // delete requires a reference type
